tubeplus/aws/ingress-common/ingress-common.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: tubeplus
  annotations:
    # cert-manager.io/issuer: "letsencrypt-production"
    # nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-methods: "PUT, GET, POST, OPTIONS"
    nginx.ingress.kubernetes.io/cors-allow-origin: "*"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization, origin, content-type, accept"
    nginx.ingress.kubernetes.io/cors-max-age: "3600"

spec:
  ingressClassName: nginx
  defaultBackend:
      service:
        name: tubeplus-etc
        port:
          number: 80
  rules:
  - host: tubeplus.online
    http:
      paths:
      # - path: /api/v1/users
      #   pathType: Prefix
      #   backend:
      #     service:
      #       name: tubeplus-user
      #       port:
      #         number: 80
      - path: /api/v1/etc
        pathType: Prefix
        backend:
          service:
            name: tubeplus-etc
            port:
              number: 80
  # tls:
  #     - hosts:
  #       - tubeplus.online
  #       secretName: tls-secret
